--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "dotenv": "^16.4.7",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1"
