--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@huggingface/inference": "^2.8.1",
     "dotenv": "^16.4.7",
     "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1"
+    "react-dom": "19.0.0-rc.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
